[package]
name = "pmr"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A process manager in Rust"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.33.1"
tabled = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
serde_json = "1.0"
crossterm = "0.28.1"
once_cell = "1.18.0"
