[package]
name = "pmr"
version = "0.0.1"
edition = "2021"
authors = ["GaoGaoWhipser <gaogaowhisper@qq.com>"]
description = "A process manager in Rust"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.29.11"
tabled = "0.14.0"
serde = { version = "1.0.193", features = ["derive"] }
dirs = "5.0.1"
serde_json = "1.0.108"
crossterm = "0.28.1"
once_cell = "1.18.0"
ctrlc = "3.4.5"
windows-sys = "0.36.1"
